src/components/Lists/lists.scss
.list-container {
	display: flex;
	flex-direction: column;
	gap: 1rem;
	max-width: 100%;
	overflow: visible;

	@media (min-width: 768px) {
		display: grid;
		grid-template-columns: repeat(2, 1fr);
	}

	@media (min-width: 1024px) {
		grid-template-columns: repeat(3, 1fr);
	}

	@media (min-width: 1400px) {
		grid-template-columns: repeat(4, 1fr);
	}
}

.list.list_unsorted {
	background-color: rgba(0, 0, 0, 0.1);
	border: none;
	bottom: 0;
	height: auto;
	padding: 0;
	position: absolute;
	right: 0;
	top: 0;
	touch-action: auto;

	&:only-child {
		left: 0;
	}

	&:not(:only-child) {
		left: 0;
		bottom: 70%;
	}

	.task-item {
		position: absolute;
	}

	@media (prefers-reduced-motion: no-preference) {
		transition: all 0.3s ease;
	}

	ul {
		height: 100%;
	}

	.task-item {
		box-shadow: var(--box-shadow);
	}
}

.list {
	user-select: none;
	-webkit-user-select: none;
	-ms-user-select: none;

	&.is-dragging {
		box-shadow: var(--box-shadow-dragging);
		cursor: grabbing;
	}

	&:focus-within {
		z-index: 15;
	}

	&:not(.list_unsorted) {
		background-color: var(--color-surface);
		border-radius: var(--border-radius-base);
		border: var(--border-base);
		cursor: grab;
		display: flex;
		flex-direction: column;
		gap: 0.5rem;
		height: fit-content;
		min-width: 0;
		padding: 0.75rem 1rem;
		position: relative;
		touch-action: manipulation;

		&:active {
			cursor: grabbing;
		}

		@media (min-width: 1200px) {
			gap: 1rem;
		}
	}

	header {
		--padding-y: 0.25rem;

		align-items: flex-start;
		display: flex;
		gap: 1rem;
		justify-content: space-between;

		> * {
			flex: 0 1 auto;
			min-width: 0;
			max-width: 100%;
			word-break: break-word;
		}

		> .list-name {
			border-bottom: calc(var(--outline-width) + 1px) var(--outline-style) transparent;
			cursor: text;
			line-height: 1.4;
			margin-top: calc(-1 * var(--padding-y));
			min-height: 1.05lh;
			padding-bottom: calc(var(--padding-y) / 2);
			padding-top: var(--padding-y);

			&:focus-visible {
				border-bottom-color: var(--outline-color);
			}
		}

		> aside {
			align-items: center;
			display: flex;
			flex: 0 0 auto;
			padding-top: calc(var(--padding-y) / 2);
			width: min-content;
			gap: 0.5rem;
			position: relative;
			z-index: 10;
		}
	}

	> ul {
		display: flex;
		flex-direction: column;
		list-style: none;
		gap: 0.25rem;
		margin: 0;
		padding: 0;

		@media (min-width: 1200px) {
			gap: 0.5rem;
		}
	}
}

textarea.list-name {
	--padding-x: 0.25rem;

	background-color: hsl(242.91deg 40% 87.65%);
	border-radius: 0;
	font-family: var(--font-family-headings);
	font-size: var(--font-size-h2);

	margin-left: calc(-1 * var(--padding-x));
	padding-inline: var(--padding-x);

	width: auto;

	&::placeholder {
		opacity: 0.7;
	}
}

.list-footer {
	display: grid;
	font-size: 1rem;
	gap: 0.5rem;
	grid-template-columns: auto 1fr;

	button {
		align-self: start;
	}
}

